app release name modified

--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -86,7 +86,7 @@ android {
         versionName getVersionName()
         testInstrumentationRunner('androidx.test.runner.AndroidJUnitRunner')
         vectorDrawables.useSupportLibrary = true
-        archivesBaseName = 'ODK-Collect'
+        archivesBaseName = 'JED Optima'
     }
 
     signingConfigs {
